--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import './styles/reset.css';
+@import './styles/base.css';
+@import './styles/modules/buttons.css';
+@import './styles/utilities/responsive-margin.css';
+@import './styles/utilities/responsive-padding.css';
